# browsing

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  TODO.md
docs/: ARCHITECTURE.md  CLI_USAGE.md  EXAMPLES.md  HEADLESS_BROWSER_USAGE.md  LIBRARY_USAGE.md  MCP_USAGE.md  index.html
examples/: README.md  basic_navigation.rs  browse_navigate_extract.rs  comprehensive_showcase.rs  custom_actions.rs  ibm_content_download.rs  library_usage.rs  simple_navigation.rs
src/: config.rs  error.rs  lib.rs  logging.rs  utils.rs  views.rs
src/actor/: element.rs  keyboard.rs  mod.rs  mouse.rs  page.rs  utils.rs
src/agent/: json_extractor.rs  mod.rs  service.rs  views.rs
src/browser/: cdp.rs  launcher.rs  mod.rs  navigation.rs  profile.rs  screenshot.rs  session.rs  session_guard.rs  tab_manager.rs  views.rs
src/dom/: ax_node.rs  cdp_client.rs  enhanced_snapshot.rs  html_converter.rs  mod.rs  processor.rs  serializer.rs  serializer_test.rs  service.rs  tree_builder.rs  views.rs
src/llm/: base.rs  mod.rs  watsonx.rs
src/tokens/: mod.rs  views.rs
src/tools/: mod.rs  registry.rs  service.rs  service_test.rs  views.rs
src/tools/handlers/: advanced.rs  content.rs  extract.rs  interaction.rs  mod.rs  navigation.rs  tabs.rs
src/traits/: browser_client.rs  dom_processor.rs  mod.rs
src/utils/: signal.rs
tests/: actor_test.rs  agent_execution_test.rs  agent_service_test.rs  agent_test.rs  browser_lifecycle_test.rs  browser_managers_test.rs  browser_test.rs  cdp_enhancements_test.rs  dom_extraction_test.rs  dom_test.rs  error_handling_test.rs  integration_test.rs  integration_workflow_test.rs  llm_test.rs  security_test.rs  tools_handlers_test.rs  tools_test.rs  traits_test.rs  utils_test.rs
