[package]
name = "browser-use"
version = "0.1.0"
edition = "2024"
authors = ["Browser Use Contributors"]
license = "MIT"
repository = "https://github.com/browser-use/browser-use-rs"
description = "Make websites accessible for AI agents - Rust implementation"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyrepair = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
http = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Utilities
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
url = "2.5"
urlencoding = "2.1"
pathdiff = "0.2"
lazy_static = "1.5"
base64 = "0.22"

# Testing
insta = "1.40"
pulldown-cmark = "0.10"

# Watsonx SDK
watsonx-rs = "0.1"

# MCP
rmcp = "0.1"

# CDP client (WebSocket for CDP communication)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

