[package]
name = "browsing"
version = "0.1.1"
edition = "2024"
authors = ["Ying Kit WONG"]
license = "Apache-2.0"
repository = "https://github.com/yingkitw/browsing"
description = "Autonomous web browsing for AI agents - Rust implementation with MCP support"
keywords = ["ai", "agents", "web-browsing", "automation", "mcp"]
documentation = "https://docs.rs/browsing"
homepage = "https://github.com/yingkitw/browsing"

[lib]
name = "browsing"
path = "src/lib.rs"

[[bin]]
name = "browsing"
path = "src/bin/cli.rs"

[[bin]]
name = "browsing-mcp"
path = "src/bin/mcp_server.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env", "color"] }
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyrepair = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
http = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# Utilities
uuid = { version = "1.10", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
url = "2.5"
urlencoding = "2.1"
pathdiff = "0.2"
lazy_static = "1.5"
base64 = "0.22"

# Testing
insta = "1.40"
pulldown-cmark = "0.10"
tempfile = "3.8"

# MCP
rmcp = "0.14"

# CDP client (WebSocket for CDP communication)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[[example]]
name = "basic_navigation"
path = "examples/basic_navigation.rs"

[[example]]
name = "comprehensive_showcase"
path = "examples/comprehensive_showcase.rs"

[[example]]
name = "simple_navigation"
path = "examples/simple_navigation.rs"

